--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "engines": {
     "node": "~8.9.4",
@@ -41,6 +41,7 @@
     "gulp-csso": "^3.0.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-watch": "^5.0.0"
+    "gulp-watch": "^5.0.0",
+    "nodemon": "^1.17.3"
   }
 }
