--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
     "mongoose": "^5.0.17",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
