--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mongoose": "^5.0.17",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
+    "request": "^2.85.0",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
