--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "mongoose": "^5.0.17",
@@ -49,6 +50,7 @@
     "gulp-nodemon": "^2.2.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-watch": "^5.0.0",
-    "nodemon": "^1.17.3"
+    "nodemon": "^1.17.3",
+    "workbox-build": "^3.2.0"
   }
 }
