--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./bin/www"
+    "start": "forever start ./bin/www"
   },
   "engines": {
     "node": "~8.9.4",
@@ -36,10 +36,12 @@
     "express": "~4.15.5",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
+    "forever": "^0.15.3",
     "fs": "0.0.1-security",
     "mongoose": "^5.0.17",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
+    "readline": "^1.3.0",
     "request": "^2.85.0",
     "serve-favicon": "~2.4.5"
   },
@@ -48,7 +50,6 @@
     "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^3.1.0",
     "gulp-csso": "^3.0.1",
-    "gulp-nodemon": "^2.2.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-watch": "^5.0.0",
     "nodemon": "^1.17.3",
