--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "forever start ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "engines": {
     "node": "~8.9.4",
