--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "debug": "~2.6.9",
     "dotenv": "^5.0.1",
     "ejs": "~2.5.7",
-    "express": "~4.15.5",
+    "express": "^4.16.3",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "forever": "^0.15.3",
@@ -52,7 +52,7 @@
     "gulp-csso": "^3.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-watch": "^5.0.0",
-    "nodemon": "^1.17.3",
+    "nodemon": "^1.17.4",
     "workbox-build": "^3.2.0"
   }
 }
