--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Browse the shops nearby with ease",
   "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "forever start ./bin/www",
     "watch": "nodemon ./bin/www"
   },
   "engines": {
@@ -46,7 +46,8 @@
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
-    "gulp": "^4.0.0",
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.9.4",
     "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^3.1.0",
     "gulp-csso": "^3.0.1",
