--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Browse the shops nearby with ease",
   "main": "app.js",
   "scripts": {
-    "start": "forever start ./bin/www",
+    "start": "node start ./bin/www",
     "watch": "nodemon ./bin/www"
   },
   "engines": {
